--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -3,6 +3,7 @@
         <title><%= title %></title>
     </head>
     <body>
+        <%- include("../navbar")%>
         <main>
             <h1>Welcome to the homepage!!</h1>
             <a href="/library" > Get Started </a>
