--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -5,21 +5,29 @@
     <body>
         <%- include("../navbar")%>
         <main>
-            <form action="/signup">
-                <section>
-                    <label for="username">username</label>
-                    <input type="text" id="username" name="username">
-                </section>
-                <section>
-                    <label for="password">password</label>
-                    <input type="password" id="password" name="password">
-                </section>
-                <section>
-                    <label for="confirmPassword">confirm password</label>
-                    <input type="password" id="confirm-password" name="confirmPassword">
-                </section>
-                <button id="submit">Sign up</button>
-            </form>
+            <div>
+                <h2>Sign up for free</h2>
+                Or <a href="/log-in"> log in to your existing account</a>
+            </div>
+            <div>
+                <form action="/sign-up" method="post" class="form signup">
+                    <section>
+                        <label for="username">username</label>
+                        <input type="text" id="username" name="username">
+                    </section>
+                    <section>
+                        <label for="password">password</label>
+                        <input type="password" id="password" name="password">
+                    </section>
+                    <section>
+                        <label for="confirmPassword">confirm password</label>
+                        <input type="password" id="confirm-password" name="confirmPassword">
+                    </section>
+                    <div>
+                        <button id="submit">Sign up</button>
+                    </div>
+                </form>
+            </div>
         </main>
     </body>
 </html>
