--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title><%= title %></title>
+        <title>Home</title>
     </head>
     <body>
         <%- include("../navbar")%>
