update view pages to act dynamically w.r.t login session

--- a/views/log-in/login.ejs
+++ b/views/log-in/login.ejs
@@ -10,7 +10,7 @@
                 Or <a href="/sign-up">Sign up for a new account</a>
             </div>
             <div>
-                <form action="/log-in" method="get">
+                <form action="/log-in" method="post">
                     <section>
                         <label for="username">username</label>
                         <input type="text" id="username" name="username">
