--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -20,7 +20,7 @@
                         <input type="password" id="password" name="password">
                     </section>
                     <section>
-                        <label for="confirmPassword">confirm password</label>
+                        <label for="confirm-password">confirm password</label>
                         <input type="password" id="confirm-password" name="confirmPassword">
                     </section>
                     <div>
