update the middlewares so that user entered username is unique

--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -28,6 +28,16 @@
                     </div>
                 </form>
             </div>
+
+            <div>
+                <%if(locals.errors) {%>
+                    <ul>
+                        <%locals.forEach(error => {%>
+                            <li><%= error %></li>
+                        <%})%>
+                    </ul>
+                <%}%>
+            </div>
         </main>
     </body>
 </html>
